test/e2e/fixtures/host-root-redirect-re2-mapping/queries-https.json
[
  {
    "url": "/",
    "method": "GET",
    "insecure": true,
    "sni": true,
    "headers": {
      "Host": "tls-context-host-1"
    }
  },
  {
    "url": "/other",
    "method": "GET",
    "insecure": true,
    "sni": true,
    "headers": {
      "Host": "tls-context-host-1"
    }
  },
  {
    "url": "/-other",
    "method": "GET",
    "insecure": true,
    "sni": true,
    "headers": {
      "Host": "tls-context-host-1"
    }
  }
]
